--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 
 	<application
+		android:gwpAsanMode="always"
 		android:allowBackup="false"
 		android:dataExtractionRules="@xml/data_extraction_rules"
 		android:icon="@mipmap/ic_launcher"
