--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,12 +30,12 @@
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
-				<!--<category android:name="android.intent.category.LAUNCHER" />-->
+				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 		<activity
 			android:name=".Simulator"
-			android:exported="true"
+			android:exported="false"
 			android:process=":simulator"
 			android:taskAffinity=""
 			android:noHistory="true"
@@ -43,13 +43,7 @@
 			android:excludeFromRecents="true"
 			android:configChanges="keyboard|keyboardHidden|uiMode"
 			android:theme="@style/Simulator"
-			tools:ignore="DiscouragedApi">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
+			tools:ignore="DiscouragedApi" />
 	</application>
 
 </manifest>
