--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,15 +29,10 @@
 		</service>
 
 		<activity
-			android:name=".WizardActivity"
-			android:configChanges="density|fontScale|keyboard|keyboardHidden|layoutDirection|locale|mcc|mnc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|touchscreen|uiMode"
-			android:exported="false"
-			android:theme="@style/AppTheme" />
-		<activity
 			android:name=".MainActivity"
 			android:exported="true"
 			android:configChanges="keyboard|keyboardHidden|orientation"
-			android:theme="@style/AppTheme">
+			android:theme="@style/SplashTheme">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
